updated About me, fixed hero image stretch

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,8 +22,7 @@ header {
   justify-content: space-between;
   flex-wrap: wrap;
   padding: 20px 35px;
-  background-color: var(--tertiary-color);
-  background-image: url("../images/mixer.jpg");
+  background-color: var(--secondary-color);
   background-size: 140%;
   background-position: top;
   background-attachment: fixed;
@@ -78,15 +77,13 @@ section {
 
 /* Hero Style Start */
 .hero {
-  align-items: flex-start;
-  display: flex;
-  justify-content: centerr;
   flex-wrap: wrap;
   background-image: url("../images/mixer.jpg");
-  background-size: 140%;
-  background-position: top;
+  background-size: cover;
+  height: fit-content;
+  background-position: bottom;
   background-attachment: fixed;
-  background-position: 40%;
+  background-repeat: no-repeat;
 }
 
 .hero-form {
@@ -141,19 +138,19 @@ section {
 
   /* Hero Call to Action */
 .hero-cta {
-  width: 35%;
-  text-align: right;
-  margin: 3.5%;
+  width: 40%;
+  text-align: center;
+  margin: 18%;
   color: #fff;
   font-size: 18px;
   line-height: 1.2;
+  text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-cta h2 {
   font-style: italic;
-  font-size: 55px;
+  font-size: 48px;
   color: var(--primary-color);
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .checkbox-wrapper input, .radio-wrapper input {
@@ -221,7 +218,17 @@ section {
   padding-bottom: 20px;
   text-align: center;
   margin: 0 auto 35px auto;
-  width 50%;
+  width: 50%;
+  font-size: 48px;
+  border-bottom: 3px solid;
+  color: var(--primary-color);
+}
+
+.section-title2 {
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
   font-size: 48px;
   border-bottom: 3px solid;
   color: var(--secondary-color);
@@ -233,15 +240,6 @@ section {
 
 .secondary-border {
   border-color: var(--tertiary-color);
-}
-
-.intro p {
-  text-align: center;
-  margin: 0 auto;
-  line-height: 1.7;
-  color: var(--tertiary-color);
-  width: 80;
-  font-size: 20px;
 }
 
 .steps {
@@ -293,14 +291,11 @@ section {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-}
-
-.step:not(:last-child) {
   border-bottom: 1px solid var(--tertiary-color);
 }
 
 .trainers {
-  width: 100%;
+  max-width: 575px;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
@@ -309,7 +304,7 @@ section {
 
 .trainer {
   flex: 1;
-  margin: 20px;
+  margin: 100px;
   background: var(--secondary-color);
   color: var(--primary-color)
 }
@@ -319,11 +314,13 @@ section {
 }
   
 .trainer-bio {
+  text-align: center;
   padding: 25px;
   line-height: 1.3;
 }
   
 .trainer-bio h3 {
+  text-align: center;
   font-size: 28px;
 }
   
@@ -474,7 +471,7 @@ footer a {
   }
 
   .hero-cta, .hero-form {
-    width: 100%;
+    width: fit-content;
   }
   
   .hero-cta {
@@ -532,10 +529,6 @@ footer a {
 
   .section-title {
     width: 95%;
-  }
-
-  .intro p {
-    width: 100%;
   }
 
   .trainer {
